force-app/main/default/objects/NI_OpportunityCalculatedAmount__c/NI_OpportunityCalculatedAmount__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for setting up conditional roll up summaries of line item total price values to the Opportunity Calculated Amount field.</description>
    <label>NI Opportunity Calculated Amount</label>
</CustomObject>