force-app/main/default/objects/NI_OpportunityCalculatedAmount__c/fields/Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Multiplier__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Amount that the line items of this specified Opportunity Record Type and Product Family combination is multiplied by. 
TIP: Use 1 to enable roll up, 0 to disable roll up.</inlineHelpText>
    <label>Multiplier</label>
    <precision>8</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>