force-app/main/default/objects/NI_OpportunityCalculatedAmount__c/fields/Opportunity_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Record Type Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>