force-app/main/default/objects/NI_OpportunityCalculatedAmount__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Family</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>