force-app/main/default/objects/NI_OpportunityCalculatedAmount__c/listViews/AIP_Open.listView-meta.xml
<ListView>
    <fullName>AIP_Open</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Record_Type_Name__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Multiplier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>AIP Open</value>
    </filters>
    <label>AIP Open</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>