force-app/main/default/objects/NI_OpportunityCalculatedAmount__c/listViews/ALL_SETTINGS.listView-meta.xml
<ListView>
    <fullName>ALL_SETTINGS</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Record_Type_Name__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Multiplier__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>ALL SETTINGS</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>