force-app/main/default/objects/NI_OpportunityCalculatedAmount__c/listViews/Amadeus_AIP.listView-meta.xml
<ListView>
    <fullName>Amadeus_AIP</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Record_Type_Name__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Multiplier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>Amadeus AIP</value>
    </filters>
    <label>Amadeus AIP</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>