force-app/main/default/objects/NI_OpportunityCalculatedAmount__c/listViews/Change_Order.listView-meta.xml
<ListView>
    <fullName>Change_Order</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Record_Type_Name__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Multiplier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>Change Order</value>
    </filters>
    <label>Change Order</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>