force-app/main/default/objects/NI_OpportunityCalculatedAmount__c/listViews/HIS_Selling_Opportunity.listView-meta.xml
<ListView>
    <fullName>HIS_Selling_Opportunity</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Record_Type_Name__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Multiplier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>HIS Selling Opportunity</value>
    </filters>
    <label>HIS Selling Opportunity</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>