force-app/main/default/objects/NI_OpportunityCalculatedAmount__c/listViews/HRM_Existing_Org_Opportunity.listView-meta.xml
<ListView>
    <fullName>HRM_Existing_Org_Opportunity</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Record_Type_Name__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Multiplier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>HRM Existing Org</value>
    </filters>
    <label>HRM Existing Org Opportunity</label>
</ListView>