force-app/main/default/objects/NI_OpportunityCalculatedAmount__c/listViews/HRM_Sales.listView-meta.xml
<ListView>
    <fullName>HRM_Sales</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Record_Type_Name__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Multiplier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>HRM Sales</value>
    </filters>
    <label>HRM Sales</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>