force-app/main/default/objects/NI_OpportunityCalculatedAmount__c/listViews/MTech_Incremental_Opportunity.listView-meta.xml
<ListView>
    <fullName>MTech_Incremental_Opportunity</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Record_Type_Name__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Multiplier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>MTech Incremental Oppty</value>
    </filters>
    <label>MTech Incremental Opportunity</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>